--- a/stylle.css
+++ b/stylle.css
@@ -4,7 +4,7 @@
 }
 
 #main {
-    width: 50%;
+    width: 80%;
     margin: 0 auto;
     margin-top: 5rem;
 }
@@ -17,7 +17,7 @@ h1 {
 
 #to-do-list {
     width: 100%;
-    padding: 3rem 0;
+    padding: 5rem 0;
     background-color: red;
     border-radius: 10px;
     display: flex;
@@ -27,6 +27,8 @@ h1 {
 input {
     width: 50%;
     padding: 5px 2px;
+    background-color: white;
+    outline: none;
 }
 
 button {
